[gd_scene load_steps=2 format=3 uid="uid://basr5mxkjqjlv"]

[ext_resource type="Script" path="res://models/card/visual_card.gd" id="1_n4rgb"]

[node name="VisualCard" type="VBoxContainer"]
custom_minimum_size = Vector2(120, 160)
anchors_preset = 10
anchor_right = 1.0
offset_right = -1480.0
offset_bottom = 195.0
grow_horizontal = 2
script = ExtResource("1_n4rgb")

[node name="SelectButton" type="CheckBox" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "选择"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(120, 160)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "示例卡片"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PanelContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "蕴含着美食力量的神秘卡片。"
autowrap_mode = 3
